broccoli/BroccoliMvc/Content/Site.css
/* ... */
.register-form input {
    width: 200px;
}

.register-form td {
    padding-top: 10px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
}

.bad
{
    background-color: #FBF8E9;
}

.register-form .agreeement {
    margin-top: 20px;
}

.register-form .agreeement p {
    font-family: Segoe UI Light;
    color: #2E2E2E;
    font-size: 18px;
    margin-bottom: 5px;
}

.register-form .agreeement textarea {
    width: 378px;
    outline: none;
    resize: none;
    text-align: left;
}

.register-form .agreeement textarea:hover {
    border: 1px solid #74ca35;
}

.register-form .agreeement textarea:active {
    border: 1px solid #74ca35;
}


.register-form .register-button {
    width: 390px;
    margin-top: 20px;
}

.login-window {
    display: none;
    position: absolute;
    width: 300px;
    height: 200px;
    z-index: 200;
    top: 17px;
    left: -75px;
    cursor: default;
    font-family: Segoe UI Light;
    color: #2E2E2E;
    font-size: 14px;
}

.login-window .triangle-top {
    background: url('img/tiangle-top.png') no-repeat;
    width: 56px;
    height: 22px;
    z-index: 7;
    position: absolute;
    left: 120px;
    top: -2px;
}

.login-window .login-window-body {
    background: white;
    display: block;
    border: 1px solid #E5E5E5;
    border-top: none;
    box-shadow: 0 0 9px 2px #E5E5FA;
    position: relative;
    top: 18px;
    padding-top: 30px;
    padding-bottom: 40px;
}

.login-window .login-window-body label {
    font-size: 14px;
}

.login-window .login-window-body .labels {
    width: 80px;
    margin-top: 5px;
}

.login-window .login-window-body .indent {
    height: 5px;
}

.login-window .login-window-body #loginForm {
    width: 215px;
    height: 100px;
    margin-left: auto;
    margin-right: auto;
}

.login-window .login-window-body #loginForm .controls {
    width: 130px;
    height: 20px;
    float: right;
}

.login-window .login-window-body #loginForm a {
    float: right;
}

.login-window .login-window-body #loginForm label {
    vertical-align: middle;
}

.login-window .login-window-body #loginForm button {
    width: 100%;
}

.cabinet-menu {
    width: 20%;
}

.cabinet-menu h4 {
    margin-top: 25px;
    margin-bottom: 10px;
    font-family: Segoe UI;
    cursor: default;
    color: #98cb66;
}

.cabinet-menu h5 {
    margin-bottom: 5px;
}

.cabinet-menu h5:hover {
    color: #98cb66;
    cursor: pointer;
}

.cabinet-menu .notifications-count {
    color: #98cb66;
    font-family: Segoe UI;
    display: inline;
}

.cabinet-main {
    width: 80%;
    padding-top: 25px;
    padding-left: 90px;
}

.cabinet-main #activateForm table tr {
    height: 40px;
}

.cabinet-main #activateForm table .labels {
    width: 200px;
}

.cabinet-main #activateForm table .inputs {
    width: 215px;
}

.cabinet-main #activateForm table .inputs button {
    width: 100%;
}

.cabinet-main #activateForm table input {
    width: 210px;
}

.cabinet-main #activateForm table select {
    height: 30px;
    padding: 5px;
    width: 210px;
    outline: none;
}

.cabinet-main #accountsTable {
    *border-collapse: collapse; /* Для IE7 и старше */
    border-spacing: 0;
    width: 100%;
}

.grid {
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
    -webkit-box-shadow: 0 1px 1px #ccc; 
    -moz-box-shadow: 0 1px 1px #ccc; 
    box-shadow: 0 1px 1px #ccc;         
}

.grid tr:hover {
    background: #fbf8e9;
    -o-transition: all 0.1s ease-in-out;
    -webkit-transition: all 0.1s ease-in-out;
    -moz-transition: all 0.1s ease-in-out;
    -ms-transition: all 0.1s ease-in-out;
    transition: all 0.1s ease-in-out;     
}    
    
.grid td, .grid th {
    border-left: 1px solid #ccc;
    border-top: 1px solid #ccc;
    padding: 10px;
    text-align: left;    
}

.grid th {
    background-color: #2c6223;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#a2d26b), to(#2c6223));
    background-image: -webkit-linear-gradient(top, #a2d26b, #2c6223);
    background-image:    -moz-linear-gradient(top, #a2d26b, #2c6223);
    background-image:     -ms-linear-gradient(top, #a2d26b, #2c6223);
    background-image:      -o-linear-gradient(top, #a2d26b, #2c6223);
    background-image:         linear-gradient(top, #a2d26b, #2c6223);
    -webkit-box-shadow: 0 1px 0 rgba(255,255,255,.8) inset; 
    -moz-box-shadow:0 1px 0 rgba(255,255,255,.8) inset;  
    box-shadow: 0 1px 0 rgba(255,255,255,.8) inset;        
    border-top: none;
    color: white;
}

.grid td:first-child, .grid th:first-child {
    border-left: none;
}

.grid th:first-child {
    -moz-border-radius: 6px 0 0 0;
    -webkit-border-radius: 6px 0 0 0;
    border-radius: 6px 0 0 0;
}

.grid th:last-child {
    -moz-border-radius: 0 6px 0 0;
    -webkit-border-radius: 0 6px 0 0;
    border-radius: 0 6px 0 0;
}
.grid tr:last-child td:first-child {
    -moz-border-radius: 0 0 0 6px;
    -webkit-border-radius: 0 0 0 6px;
    border-radius: 0 0 0 6px;
}

.grid tr:last-child td:last-child {
    -moz-border-radius: 0 0 6px 0;
    -webkit-border-radius: 0 0 6px 0;
    border-radius: 0 0 6px 0;
}

.grid .broker {
    padding-left: 40px;
}

/* Custom styles */
.grid .broker .logo-container {
    position: relative;
    width: 30px;
}

.grid .broker .logo-container .broker-logo {
    position: absolute;
    top: -7px;
    left: -35px;
}

.grid .status {
    
}

.cabinet-main .error-message {
    color: #900;
}

.invite-list {
    width: 630px;
    margin: 10px 0 10px 0;
}

.invite-list th {
    text-align: left;
    padding-left: 15px;
    padding-bottom: 10px;
}

.invite-list td {
    padding: 10px 0;
}

.invite-list td:first-child {
    text-align: center;
    padding-left: 20px;
    padding-right: 10px;  
}

.invite-list .inputs {
    padding-left: 10px;
    padding-right: 10px;
}

.invite-list .for-img {
    position: relative;
    height: 18px;
    float: left;
}
/* ... */

